# CZD-avatar

./: .env.example  .gitignore  README.md  agents.md  prompt_preset_refactor_plan.md  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py  models.py
app/rag/: catalog.py  chunking.py  documents.py  embeddings.py  llm.py  llm_providers.py  model_metadata.py  msearch.py  pipeline.py  placeholders.py  prompt_presets.py  prompts.py  reranker.py  retrieval.py  token_budget.py  vector_store.py  wp_config.py
app/static/: app.js  index.html  styles.css
data/: model_context_windows.json  placeholders.json
data/collections/czech_history/questions/: questions.txt  questions_extended.txt
data/raw/: agent.md
scripts/: ask.py  batch_answers.py  download_wikipedia.py  ingest.py
tests/: test_endpoint_policy.py  test_llm_payload.py  test_llm_providers.py  test_model_metadata.py  test_msearch.py  test_placeholders.py  test_prompt_preset_endpoints.py  test_prompt_presets.py  test_prompts.py  test_random_questions.py  test_reranker.py  test_retrieval_query_rewrite.py  test_retrieve_baseline.py  test_token_budget.py  test_wp_config.py
