[project]
name = "czech-history-rag-avatar"
version = "0.1.0"
description = "FastAPI RAG MVP for Czech history documents."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.11.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.3.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "scripts*"]
